feat: Upgrade to Java 11 (#548)
* Full Liberica distribution is required for LibericaFX (javafx)
* Change default JVM arguments for the game
* Drop Linux 32-bit - there's no Liberica full build for it.
* Use gradle-with-sources for better code completion

Co-authored-by: DarkWeird <foxflameless@gmail.com>
Co-authored-by: Tobias Nett <skaldarnar@googlemail.com>